# application

./: .gitignore  Dockerfile  README.md  functions.py  main.py  pyproject.toml  requirements.txt  test.csv  titanic.py  train.csv  train.py
.github/workflows/: prod.yaml  test.yaml
app/: api.py
configuration/: .env
data/derived/: test.csv  test.parquet  train.csv  train.parquet
notebooks/: nb.ipynb
src/data/: import_data.py
src/models/: train_evaluate.py
src/pipeline/: build_features.py  build_pipeline.py
